Add a jre built with only the necessary modules